# gov-multi-monitor

./: .editorconfig  .gitignore  README.md  freeze.py  history.json  netlify.toml  pyproject.toml  requirements.txt
.github/workflows/: check-and-deploy.yml
config/: monitor_config.yaml  test.yaml  urls.yaml
config/url_configs/: 001_fema_disaster_declarations.yaml  002_fema_datasets.yaml  002_fema_housing_assistance_program_owners.yaml  003_fcsm_sogisc.yaml  003_fema_public_assistance_projects.yaml  (+196 more)
data/: history.parquet  monitor.db
docs/: index.html  url_summary.csv
extracted_links/: 120_day_delinquent_debt_referral_compliance_report.json  ai.gov.json  american_community_survey.json  baccalaureate_and_beyond_longitudinal_study.json  beginning_postsecondary_students_longitudinal_study.json  beginning_teacher_longitudinal_study.json  behavioral_risk_factor_surveillance_system_(brfss).json  cancer.gov.json  cdc_nchs_nhis_sexual_orientation_references.json  cdc_wonder.json  census_bureau_household_pulse_survey.json  census_bureau_race_and_ethnicity.json  civil_rights_data_collection.json  consumer_financial_protection_bureau.json  doj_annual_statistical_reports.json  early_childhood_longitudinal_study.json  edfacts_(k-12).json  epa_environmental_justice.json  fast_response_survey_system.json  federal_collections.json  federal_firearms_listings.json  fema_declaration_denials.json  fema_disaster_declarations.json  fema_emergency_management_performance_grants.json  fema_hazard_mitigation_plan_status.json  fema_hazard_mitigation_projects.json  fema_hma_subapplications.json  fema_hmgp_disaster_summaries.json  fema_housing_assistance_program_(owners).json  fema_housing_assistance_program_(renters).json  fema_ipaws_archived_alerts.json  fema_mission_assignments.json  fema_nfip_claims.json  fema_nfip_community_layer.json  fema_nfip_community_status.json  fema_nfip_multiple_loss_properties.json  fema_nfip_policies.json  fema_nfip_residential_penetration_rates.json  fema_non-disaster_assistance_firefighter_grants.json  fema_pa_applicants_program_deliveries.json  (+42 more)
scripts/: README.md  check_and_deploy.py  combine_status_data.py  copy_and_clean_links_from_spreadsheet.py  deduplicate_links.py  example_link_trimmer.py  extract_and_clean_links_from_multiple_urls.py  extract_links.py  extract_links_from_multiple_urls.py  extract_links_from_url.py  fix_yaml_indentation.py  migrate_configs.py  migrate_github_logs.py  migrate_to_duckdb.py  populate_collections_csv.py  scrape_and_clean_links_from_multiple_urls.py  verify_db.py
(+459 files in other folders)
